--- a/views/index.erb
+++ b/views/index.erb
@@ -9,5 +9,10 @@
       <p> 97 Bowling Alley Lane, Boulder CO </p>
       <%= "I love " + "Ruby!!" %>
       <%= 2 + 2 %>
+      <% if 1 == 2 %>
+        <p>1 equals 2.</p>
+      <% else %>
+        <p>1 does not equal 2.</p>
+      <% end %>
   </body>
 </html>
